--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
 .App {
 	text-align: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+  font-size: calc(10px + 2vmin);
 }
