--- a/src/components/TodoList/styles.css
+++ b/src/components/TodoList/styles.css
@@ -8,7 +8,7 @@
 	background-color: #282c34;
 }
 
-.todo-list input {
+.todo-list__input {
 	height: 34px;
 	outline: none;
 	border: none;
@@ -17,7 +17,7 @@
 	border-radius: 5px;
 }
 
-.todo-list button {
+.todo-list__button {
 	height: 44px;
 	border-radius: 5px;
 	outline: none;
@@ -30,15 +30,15 @@
 	user-select: none;
 	margin-left: 10px;
 	transition: all 0.3s;
-  font-size: 13.33px;
+	font-size: 13.33px;
 }
 
-.todo-list form {
+.todo-list__form {
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
 }
 
-.todo-list ul {
+.todo-list__list {
 	margin-right: auto;
 }
